# claude_phone

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  deny.toml  package-lock.json  package.json  text.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  ct-monitor.yml  fuzz-smoke.yml
crates/claude-phone-fuzz/: .gitignore  Cargo.toml
crates/claude-phone-fuzz/fuzz_targets/: api_key.rs  control_message.rs  session_token.rs
crates/claude-phone-gateway/: Cargo.toml
crates/claude-phone-gateway/src/: auth.rs  config.rs  error.rs  http.rs  lib.rs  logging.rs  main.rs  rate_limit.rs  serve.rs
crates/claude-phone-gateway/src/routes/: health.rs  mod.rs  phone_ws.rs  statics.rs  wrapper_ws.rs
crates/claude-phone-gateway/src/session/: mod.rs  registry.rs  session.rs
crates/claude-phone-gateway/tests/: auth_failure_log_test.rs  auth_test.rs  chaos_test.rs  config_test.rs  e2e_test.rs  leakage_test.rs  negative_path_test.rs  opaque_error_test.rs  path_traversal_test.rs  pentest_e2e.rs  rate_limit.rs  registry_race_test.rs  registry_test.rs  token_charset_test.rs  websocket.rs
crates/claude-phone-pair/: Cargo.toml
crates/claude-phone-pair/src/: main.rs
crates/claude-phone-shared/: Cargo.toml
crates/claude-phone-shared/src/: lib.rs  protocol.rs  token.rs
crates/claude-phone-shared/tests/: leakage_test.rs  proptest_protocol.rs  protocol_test.rs  token_test.rs
crates/claude-phone-wrapper/: Cargo.toml
crates/claude-phone-wrapper/src/: bridge.rs  cli.rs  config.rs  gateway_client.rs  lib.rs  local_term.rs  main.rs  pty.rs  qr.rs  rpc.rs  session.rs  tty.rs
crates/claude-phone-wrapper/tests/: bridge_test.rs  cli_test.rs  cli_validation_test.rs  config_test.rs  gateway_client_test.rs  leakage_test.rs  pty_test.rs  qr_test.rs  rpc_test.rs  session_test.rs  tty_test.rs
deploy/: Dockerfile.gateway  docker-compose.yml
deploy/auditd/: claude-phone.rules
deploy/caddy/: Caddyfile  README.md
deploy/cloudflare/: README.md
deploy/fail2ban/: jail.local
deploy/fail2ban/filter.d/: claude-phone.conf
deploy/journald/: 99-claude-phone.conf
deploy/scripts/: deploy.sh  post_deploy_verify.sh  rollback.sh  setup-ufw.sh  update.sh
deploy/sshd/: 99-claude-phone.conf
deploy/systemd/: claude-phone-gateway.service
docs/: api.md  deployment.md  development.md  plugin-installation.md  protocol.md  security.md
docs/adr/: 0001-rust-for-network.md  0002-pty-not-sdk.md  0003-xterm-for-rendering.md
docs/superpowers/plans/: 2026-05-22-test-coverage-and-leakage-prevention.md
docs/superpowers/specs/: 2026-05-22-test-coverage-and-leakage-prevention-design.md  2026-05-23-sec-4.13-websocket.md  2026-05-23-sec-4.14-code-audit.md  2026-05-23-sec-4.15-testing.md  2026-05-23-sec-4.2-auth.md  2026-05-23-sec-4.3-transport.md  2026-05-23-sec-4.5-input.md  2026-05-23-sec-4.6-rate-limit.md  2026-05-23-sec-4.7-secrets.md  2026-05-23-sec-4.9-infra.md  2026-05-23-security-hardening-design.md  2026-05-23-threat-model.md
plugin/: README.md  install.sh  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: phone.md
scripts/: asymmetric_guards.sh  audit_unsafe.sh  check_debug_derive_secrets.sh  check_hot_path_unwrap.sh  check_tracing_secrets.sh  check_unbounded_channels.sh  ct_monitor.sh  fail2ban_filter_test.sh  security_invariants.sh  smoke-localhost.sh  smoke-phone.mjs  smoke-reconnect.mjs  tm_coverage.sh
web/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  main.tsx
web/src/components/ActionBar/: ActionBar.module.css  ActionBar.tsx  keys.ts
web/src/components/ErrorBoundary/: ErrorBoundary.tsx
web/src/components/InputBar/: InputBar.module.css  InputBar.tsx
web/src/components/Layout/: MobileLayout.tsx
web/src/components/PasteModal/: PasteModal.module.css  PasteModal.tsx
web/src/components/Terminal/: Terminal.module.css  Terminal.tsx  theme.ts  useTerminal.ts
web/src/hooks/: useFontSize.ts  useReconnect.ts  useVisualViewport.ts  useWakeLock.ts  useWebSocket.ts
web/src/lib/: protocol.ts  ws_client.ts
web/src/pages/: ErrorPage.tsx  NotFoundPage.tsx  SessionPage.tsx
web/src/store/: session.ts
web/src/styles/: claude-tui.css  globals.css
web/tests/: ActionBar.test.tsx  App.test.tsx  ErrorBoundary.test.tsx  ErrorPage.test.tsx  InputBar.test.tsx  MobileLayout.test.tsx  NotFoundPage.test.tsx  PasteModal.test.tsx  SessionPage.test.tsx  Terminal.test.tsx  keys.test.ts  leakage.test.ts  mock-ws.ts  protocol.test.ts  session.test.ts  useFontSize.test.ts  useReconnect.test.ts  useVisualViewport.test.ts  useWakeLock.test.ts  useWebSocket.test.ts  web-supply-and-sw.test.ts  ws_client.test.ts
