[workspace]
resolver = "2"
members = [
    "crates/claude-phone-shared",
    "crates/claude-phone-wrapper",
    "crates/claude-phone-pair",
    "crates/claude-phone-gateway",
]
# TM-TEST.1 — `crates/claude-phone-fuzz` is a stand-alone cargo-fuzz crate.
# It is intentionally NOT a workspace member: libfuzzer-sys requires a
# nightly toolchain + sanitizer rustflags, which would force every
# `cargo build --workspace` invocation onto nightly. Keeping it excluded
# means `cargo test --workspace` on stable stays clean, while
# `.github/workflows/fuzz-smoke.yml` drives the fuzz targets on nightly.
exclude = ["crates/claude-phone-fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
# TM-SUPPLY.4 — workspace is intentionally not publishable to crates.io.
# Setting `publish = false` here propagates to every member via
# `publish.workspace = true` in their [package] sections. Side benefit:
# `cargo-deny`'s `allow-wildcard-paths` only exempts internal path-deps
# of non-public crates, so this is what makes `wildcards = "deny"`
# tractable for the workspace.
publish = false
repository = "https://github.com/hhubercio-netizen/claude_phone"

[workspace.dependencies]
# async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"

# HTTP / WS
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace", "set-header"] }
hyper = { version = "1", features = ["full"] }
# TM-RATE.9 — direct hyper builder lets us set http1_header_read_timeout,
# which axum::serve doesn't expose. Needed in main.rs to bound the
# slow-loris attack on the HTTP upgrade phase.
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "tokio"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# TM-RATE.1 — per-IP HTTP rate limit. tower_governor wraps the leaky-bucket
# `governor` library as a tower layer that special-cases WS upgrades so the
# inner future swap doesn't double-count.
tower_governor = "0.4"
governor = "0.6"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# PTY
portable-pty = "0.8"

# crypto / random
rand = "0.8"
base64 = "0.22"

# utils
async-trait = "0.1"
http-body-util = "0.1"
clap = { version = "4", features = ["derive", "env"] }
qrcode = { version = "0.14", default-features = false }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"

# testing
tokio-test = "0.4"
portpicker = "0.1"
tempfile = "3"
# `no-env-filter` is required for integration tests (in `tests/`): without
# it, tracing-test's subscriber drops events from the gateway crate because
# the integration-test binary is a different crate name. See the
# tracing-test 0.2 docs, last paragraph of the crate-level rationale.
tracing-test = { version = "0.2", features = ["no-env-filter"] }
# TM-TEST.2 — property-based tests over the wire protocol and secret-token
# parsers. Pinned to a single workspace version so the proptest binary,
# regression-corpus format, and proc-macro stay in lockstep across crates.
proptest = "1.5"

# secrets handling
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
