[package]
name = "claude-phone-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "claude-phone-gateway"
path = "src/main.rs"

[lib]
name = "claude_phone_gateway"
path = "src/lib.rs"

[dependencies]
claude-phone-shared = { path = "../claude-phone-shared" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
