[package]
name = "claude-phone-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
