[package]
name = "claude-phone-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# TM-TEST.2 — property-based tests for the wire protocol and secret-token
# parsing. Dev-only so it never lands in any production binary.
proptest = { workspace = true }
