[package]
name = "claude-phone-wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claude-phone"
path = "src/main.rs"

[lib]
name = "claude_phone_wrapper"
path = "src/lib.rs"

[dependencies]
claude-phone-shared = { path = "../claude-phone-shared" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
qrcode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
directories = "5"
terminal_size = "0.4"
crossterm = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
http-body-util = { workspace = true }
portpicker = { workspace = true }
